Update dependencies & bump version